Droid bug - text wrapping halfway through the div

--- a/res/index.css
+++ b/res/index.css
@@ -3,6 +3,10 @@ body {
 	line-height: 150%;
 }
 
+p {
+	background: url('');
+}
+
 #description {
 	margin: auto;
 	/*width: 60%;*/
